--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -32,7 +32,7 @@ Although 360° video is a form of VR, it does not provide a fully immersive expe
 
 Unlike in immersive VR, the audience’s interaction with scenes or characters is very limited or even nonexistent. Audiences can turn their heads to observe their surroundings, but this won’t change how stories will progress. 
 
-## Guiding the Audience Through A Story  
+## Guiding the Audience Through a Story  
 
 The biggest attraction of 360° video is rotation, but this creates an obstacle for video creators. It’s unreasonable to expect audiences to look in the correct direction at just the right time so that the stories they are viewing can be told fully and be understood just as the creators intended. 
 
@@ -80,7 +80,7 @@ Monoscopic cameras are the most commonly used cameras in 360° video shooting; t
     </p>
    
 
-## Image Distortion Problems
+## Image Distortion Problem
 
 Stitching plays a significant role in 360° video production. This is the step during which all video files captured by the cameras’ lenses are combined and edited so that they can be viewed as a 3D space, providing audiences with the feeling of reality. Some cameras do stitching in real time, whereas others record videos that require post-production work using stitching software. Generally speaking, 360° videos captured by a stereoscopic camera require heavier stitching work than those captured by a monoscopic camera.
 
