Update to GIS Day pages

--- a/collections/_posts/2021-11-11-gis-day-2021.md
+++ b/collections/_posts/2021-11-11-gis-day-2021.md
@@ -14,23 +14,22 @@ tags:
 November 17th is International GIS Day, and we'd love for you to join us in this celebration of all things spatial. We always enjoy getting together to see and discuss your amazing GIS work while enjoying a delicious piece of cake, but due to - well, you know - we're going to do things a little differently this year. In lieu of presentations and cake, we're holding a virtual kickoff event for our Community Mapping Project, where we're asking you to help us collect the locations of public art projects and installations in and around Charlottesville. All you need is a mobile phone with a current browser to participate.
 
 We are hosting our kickoff Zoom session at 2pm on November 17 for all volunteer mappers. Please [Register Here](https://cal.lib.virginia.edu/calendar/events/GISDay2021) to attend the virtual kickoff event!
- \
- \
+
 Can’t make the event? Don’t worry! Keep scrolling, or [Click Here](https://storymaps.arcgis.com/stories/b13bbb931c77455aaa51d256f1740d56), for more information, including a link to the public art location survey and a live view of already collected locations.
 
-**Survey**
+# Survey
 
-You may use the survey below, in a mobile browser, or in the Survey123 app.
+You may use the survey below or use the link to open in a browser or in the Survey123 app.
 
 [Survey URL](https://arcg.is/0j0y1y0)
 
 <style>.embed-container {position: relative; height: 0; padding-bottom:80%; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe name="survey123webform" width="700" height="1300" frameborder="0" marginheight="0" marginwidth="0" title="GIS Day Public Art Survey" src="//survey123.arcgis.com/share/369e783e142b4907bd2b168963da2ce3?hide=header" allow="geolocation https://survey123.arcgis.com; camera https://survey123.arcgis.com"></iframe></div><script>var survey123webform = document.getElementsByName('survey123webform')[0];window.addEventListener("message",e=>{if(e.data){var t=JSON.parse(e.data);"survey123:onFormLoaded"===t.event&&t.contentHeight&&(survey123webform.parentNode.style.height=t.contentHeight+"px")&&(survey123webform.parentNode.style["padding-bottom"]="unset")}});</script>
 
-**Results**
+# Results
 
 <style>.embed-container {position: relative; padding-bottom: 57%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="700" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Charlottesville Public Art" src="//uvalibrary.maps.arcgis.com/apps/Embed/index.html?webmap=ca46833fb3f1470a8ad4ca962396303b&extent=-78.5592,38.0039,-78.4324,38.0679&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light&legend=true"></iframe></div>
 
-**Tips**
+# Tips
 
 Feel free to create entries for locations already entered. We will figure out a way to share all the unique views of each object. FYI, results map may take a few minutes to refresh showing new entries.
 
@@ -41,8 +40,9 @@ You can take the survey offline using the Survey123 app to avoid any data charge
 [Google Play](https://play.google.com/store/apps/details?id=com.esri.survey123)
 
 [Other Platforms](https://www.esri.com/en-us/arcgis/products/arcgis-survey123/resources#settingup)
-\
-\
+
+#
+
 <cite>Public art instills meaning—a greater sense of identity and understandings of where we live, work, and visit—creating memorable experiences for all. It humanizes the built environment, provides an intersection between past, present, and future, and can help communities thrive.</cite>
 
 Tate Gallery (UK)  [https://www.tate.org.uk/art/art-terms/p/public-art](https://www.tate.org.uk/art/art-terms/p/public-art)
