Typo ("FThe Archaeology of Affect")

--- a/collections/_posts/2023-04-13-meet-our-2023-2024-fellows.md
+++ b/collections/_posts/2023-04-13-meet-our-2023-2024-fellows.md
@@ -28,7 +28,7 @@ Look forward to more details about the Praxis Program’s work in the fall!
 
 Finally, we are looking forward to working with Jennifer Saunders, our 2023-2024 Graduate Fellow in the Digital Humanities.
 
-*	Jennifer Saunders' (Anthropology) dissertation is titled "FThe Archaeology of Affect: 19th-20th-Century Black Education in a Plantation Landscape, Powhatan County, Virginia"
+*	Jennifer Saunders' (Anthropology) dissertation is titled "The Archaeology of Affect: 19th-20th-Century Black Education in a Plantation Landscape, Powhatan County, Virginia"
 
 Jennifer will work with our team throughout the year and over the summer on substantial research projects related to her dissertation. She joins a vibrant community of students working in the lab in the coming year.
 
