More cat/tags cleanup...
BW okayed removing Grad Research category from fellowship cfp & name announce posts

--- a/collections/_posts/2023-04-13-meet-our-2023-2024-fellows.md
+++ b/collections/_posts/2023-04-13-meet-our-2023-2024-fellows.md
@@ -4,11 +4,7 @@ date: 2023-04-13
 layout: post
 slug: meet-our-2023-2024-fellows
 title: Meet Our 2023-2024 Fellows
-categories:
-- Digital Humanities
-tags:
-- Digital Humanities
-- Graduate Student Research
+type: announcement
 ---
 We are thrilled to announce the 2023-2024 Scholar’s Lab fellows for the Praxis Program and the Graduate Fellowship in the Digital Humanities. We are welcoming 6 fellows from 3 disciplines from the arts, humanities, and social sciences. Our graduate fellows are joining a robust and vibrant community of past students!
 
