--- a/collections/_posts/2020-11-30-lamb-blog1.md
+++ b/collections/_posts/2020-11-30-lamb-blog1.md
@@ -5,10 +5,9 @@ layout: post
 slug: fallen-women
 title: "BESSing With Collective Biographies of Women: Identifying Our Own Misconceptions of the “Fallen Woman”"
 categories:
-- Digital Humanities
 - Grad Student Research
 tags:
-- Digital Humanities
+- cbw
 ---
 As a research assistant on Alison Booth’s Collective Biographies of Women, I have come to understand how the quintessential “angel in the house” reigned supreme within many women’s biographies. This concept of the “angel in the house” emerged primarily through 1830-1890, conveniently when some of these biographies were being published. It then serves as no surprise that the trope of the “angelic” woman can quite easily be identified as these biographies were published from 1830-1940. Even the very word, “angelic,” appears 701 times in the sample textual corpus in CBW. However, it arguably becomes more fascinating to note those women who did not “fit” into this stereotypical mold. Upon reflecting on my own “BESSing” experience, I began to reanalyze previous biographies I had been assigned—specifically those in the collection *Feminine Frailty*. I was expecting myself to agree with the ascribed “Persona Descriptions” I had given to each woman, knowing that only a few weeks had passed since the completion of these biographies. Instead, I found myself questioning the author’s discourse and my own subjectivity that led to me characterizing these women.   
 
