Removes faq ( see #1023) & more YAML tags work
Searched site folder for all references to /faq and removed. See #1023 for why removed for now

--- a/collections/_posts/2010-05-11-why-ruby.md
+++ b/collections/_posts/2010-05-11-why-ruby.md
@@ -8,6 +8,8 @@ category: blog
 tags:
 - Research and Development
 - web development
+- tutorial
+- getting started
 ---
 
 Stemming from [a Twitter conversation](http://twitter.com/dougreside/status/12881732120) last month, I thought it would be a good idea to describe -- in more than the 140 character bursts that Twitter allows -- why we at the [Scholars' Lab](http://scholarslab.org/) often promote Ruby, opposed to one of the other 4 or 5 languages we develop with. This isn't an attempt to declare one language "the best," but is meant to lay out some of the fundamental reasons why we use Ruby in the context of our digital humanities work and why we think it's a nice language to suggest to folks just starting to program.<!-- more -->
