People, styling, update, post category fixes...
* Returns to & styles individual post page footer author info & styled citation
* makes every post have 1 of 3 new categories
* limits bio page post lists to category.essay post type
* styles crosspost text
* adds list of names (linked to bio pages) on update individual pages, with new update yaml "people" that can accept lists of people the update involves
* links /blog recent posts updates to their individual update page, since those now have additional info (list of folks involved in update)

--- a/collections/_posts/2019-06-04-neatline-2.6.2-release.md
+++ b/collections/_posts/2019-06-04-neatline-2.6.2-release.md
@@ -4,6 +4,7 @@ date: 2019-06-04 16:00:00
 layout: post
 title: Neatline 2.6.2 Release
 slug: neatline-2.6.2-release
+category: announcement
 ---
 
 Neatline 2.6.2 is a security release for all previous versions of Neatline for Omeka Classic, and we strongly encourage you to update to this version immediately. [Download Neatline 2.6.2](https://omeka.org/classic/plugins/Neatline/) from the Omeka Classic addons page and check out the [documentation for upgrading plugins](https://omeka.org/classic/docs/Admin/Adding_and_Managing_Plugins/#upgrading-plugins) to complete your upgrade.
