--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -4,6 +4,7 @@ date: 2019-09-09 01:00:00+00:00
 layout: post
 slug: 360-video-intro
 title: "A Quick Look at 360° Videos"
+category: essay
 tags:
 - parents fund 
 - vr-ar
